fix height issue on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -20,34 +20,29 @@ img {
 }
 
 /* line 16, ../scss/_homepage.scss */
-.headers {
-  margin: 40px 0 20px 0;
-}
-
-/* line 19, ../scss/_homepage.scss */
 #christmas-calendar {
   position: relative;
 }
 
-/* line 23, ../scss/_homepage.scss */
+/* line 20, ../scss/_homepage.scss */
 .snow {
   position: absolute;
   top: 0;
 }
 
-/* line 27, ../scss/_homepage.scss */
+/* line 24, ../scss/_homepage.scss */
 .date {
   height: 100px;
   width: 100%;
   position: relative;
 }
-/* line 31, ../scss/_homepage.scss */
+/* line 28, ../scss/_homepage.scss */
 .date .photo, .date .cover {
   position: absolute;
   cursor: pointer;
 }
 
-/* line 36, ../scss/_homepage.scss */
+/* line 33, ../scss/_homepage.scss */
 .corner {
   position: absolute;
   bottom: 0;
@@ -55,31 +50,31 @@ img {
   display: none;
 }
 
-/* line 43, ../scss/_homepage.scss */
+/* line 40, ../scss/_homepage.scss */
 .delay1 {
   animation-delay: 0.5s;
   animation-duration: 3s;
 }
 
-/* line 47, ../scss/_homepage.scss */
+/* line 44, ../scss/_homepage.scss */
 .delay2 {
   animation-delay: 1s;
   animation-duration: 3s;
 }
 
-/* line 51, ../scss/_homepage.scss */
+/* line 48, ../scss/_homepage.scss */
 .delay3 {
   animation-delay: 1.5s;
   animation-duration: 3s;
 }
 
-/* line 55, ../scss/_homepage.scss */
+/* line 52, ../scss/_homepage.scss */
 .delay4 {
   animation-delay: 2s;
   animation-duration: 3s;
 }
 
-/* line 59, ../scss/_homepage.scss */
+/* line 56, ../scss/_homepage.scss */
 .delay5 {
   animation-delay: 2.5s;
   animation-duration: 3s;
@@ -91,16 +86,21 @@ img {
 /* Small Devices, Tablets */
 @media only screen and (min-width: 768px) {
   /* line 15, ../scss/_mobile.scss */
+  .headers {
+    margin: 40px 0 10px 0;
+  }
+
+  /* line 18, ../scss/_mobile.scss */
   #christmas-calendar {
     max-width: 730px;
     margin: 0 auto;
   }
-  /* line 18, ../scss/_mobile.scss */
+  /* line 21, ../scss/_mobile.scss */
   #christmas-calendar .date {
     margin: 10px;
   }
 
-  /* line 22, ../scss/_mobile.scss */
+  /* line 25, ../scss/_mobile.scss */
   .date {
     height: 140px;
     width: 140px;
