--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -13,9 +13,6 @@ img {
 #calendar {
 	margin-bottom: 20px;
 }
-.headers{
-	margin:40px 0 20px 0;
-}
 #christmas-calendar {
 	position: relative;
 	
