--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -12,7 +12,10 @@
 
     /* Small Devices, Tablets */
     @media only screen and (min-width : 768px) {
-        #christmas-calendar{
+        .headers{
+	        margin:40px 0 10px 0;
+        }
+       #christmas-calendar{
             max-width: 730px;
             margin: 0 auto;
             .date {
